@@ -2113,6 +2113,149 @@ int Usecode_internal::call_usecode
 	}
 
 /*
+ *	Add NPC to party.
+ *
+ *	Output:	false if no room or already a member.
+ */
+
+bool Usecode_internal::add_to_party
+	(
+	Actor *npc			// (Should not be the Avatar.)
+	)
+	{
+	const int maxparty = sizeof(party)/sizeof(party[0]);
+	if (!npc || party_count == maxparty || npc->get_party_id() >= 0)
+		return false;
+	remove_from_dead_party(npc);	// Just to be sure.
+	npc->set_party_id(party_count);
+	npc->set_flag (Obj_flags::in_party);
+					// We can take items.
+	npc->set_flag_recursively(Obj_flags::okay_to_take);
+	party[party_count++] = npc->get_npc_num();
+	return true;
+	}
+
+/*
+ *	Remove party member.
+ *
+ *	Output:	false if not found.
+ */
+
+bool Usecode_internal::remove_from_party
+	(
+	Actor *npc
+	)
+	{
+	if (!npc)
+		return false;
+	int id = npc->get_party_id();
+	if (id == -1)			// Not in party?
+		return false;
+	int npc_num = npc->get_npc_num();
+	if (party[id] != npc_num)
+		{
+		cout << "Party mismatch!!" << endl;
+		return false;
+		}
+					// Shift the rest down.
+	for (int i = id + 1; i < party_count; i++)
+		{
+		Actor *npc2 = gwin->get_npc(party[i]);
+		if (npc2)
+			npc2->set_party_id(i - 1);
+		party[i - 1] = party[i];
+		}
+	npc->clear_flag (Obj_flags::in_party);
+	party_count--;
+	party[party_count] = 0;
+	npc->set_party_id(-1);
+	return true;
+	}
+
+/*
+ *	Find index of NPC in dead party list.
+ *
+ *	Output:	Index, or -1 if not found.
+ */
+
+int Usecode_internal::in_dead_party
+	(
+	Actor *npc
+	)
+	{
+	int num = npc->get_npc_num();
+	for (int i = 0; i < dead_party_count; i++)
+		if (dead_party[i] == num)
+			return i;
+	return -1;
+	}
+
+/*
+ *	Add NPC to dead party list.
+ *
+ *	Output:	false if no room or already a member.
+ */
+
+bool Usecode_internal::add_to_dead_party
+	(
+	Actor *npc			// (Should not be the Avatar.)
+	)
+	{
+	const int maxparty = sizeof(dead_party)/sizeof(dead_party[0]);
+	if (!npc || dead_party_count == maxparty || in_dead_party(npc) >= 0)
+		return false;
+	dead_party[dead_party_count++] = npc->get_npc_num();
+	return true;
+	}
+
+/*
+ *	Remove NPC from dead party list.
+ *
+ *	Output:	false if not found.
+ */
+
+bool Usecode_internal::remove_from_dead_party
+	(
+	Actor *npc
+	)
+	{
+	if (!npc)
+		return false;
+	int id = in_dead_party(npc);	// Get index.
+	if (id == -1)			// Not in list?
+		return false;
+	int npc_num = npc->get_npc_num();
+					// Shift the rest down.
+	for (int i = id + 1; i < dead_party_count; i++)
+		dead_party[i - 1] = dead_party[i];
+	dead_party_count--;
+	dead_party[dead_party_count] = 0;
+	return true;
+	}
+
+/*
+ *	Update party status of an NPC that has died or been resurrected.
+ */
+
+void Usecode_internal::update_party_status
+	(
+	Actor *npc
+	)
+	{
+	if (npc->is_dead())		// Dead?
+		{
+					// Move party members to dead list.
+		if (remove_from_party(npc))
+			add_to_dead_party(npc);
+		}
+	else				// Alive.
+		{
+		if (remove_from_dead_party(npc))
+			add_to_party(npc);
+		}
+	}
+
+/*
  *	Write out global data to 'gamedat/usecode.dat'.
  *	(and 'gamedat/keyring.dat')
  *
@@ -2198,7 +2341,8 @@ void Usecode_internal::read
 	}
 
 /*
- *	In case NPC's were read after usecode, set party members' id's.
+ *	In case NPC's were read after usecode, set party members' id's, and
+ *	move dead members into separate list.
  */
 
 void Usecode_internal::link_party
@@ -2209,23 +2353,35 @@ void Usecode_internal::link_party
 	gwin->get_main_actor()->set_flag(Obj_flags::in_party);
 					// You own your own stuff.
 	gwin->get_main_actor()->set_flag_recursively(Obj_flags::okay_to_take);
-
-	for (int i = 0; i < party_count; i++)
+	const int maxparty = sizeof(party)/sizeof(party[0]);
+	int tmp_party[maxparty];
+	int tmp_party_count = party_count;
+	int i;
+	for (i = 0; i < maxparty; i++)
+		tmp_party[i] = party[i];
+	party_count = dead_party_count = 0;
+					// Now process them.
+	for (int i = 0; i < tmp_party_count; i++)
 		{
 		Actor *npc = gwin->get_npc(party[i]);
 		int oldid;
 		if (!npc ||		// Shouldn't happen!
 					// But this has happened:
-		    (oldid = npc->get_party_id()) >= 0 && oldid < i)
-			{		// Remove bad entry.
-			for (int j = i + 1; j < party_count; j++)
-				party[j - 1] = party[j];
-			party_count--;
-			i--;		// Just shifted downwards.
-			party[party_count] = 0;
+		    ((oldid = npc->get_party_id()) >= 0 && 
+							oldid < party_count))
+			continue;	// Skip bad entry.
+		int npc_num = npc->get_npc_num();
+		if (npc->is_dead())	// Put dead in special list.
+			{
+			npc->set_party_id(-1);
+			if (dead_party_count >= 
+				    sizeof(dead_party)/sizeof(dead_party[0]))
+				continue;
+			dead_party[dead_party_count++] = npc_num;
 			continue;
 			}
-		npc->set_party_id(i);
+		npc->set_party_id(party_count);
+		party[party_count++] = npc_num;
 		npc->set_schedule_type(Schedule::follow_avatar);
 					// We can use all his/her items.
 		npc->set_flag_recursively(Obj_flags::okay_to_take);
